--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -9,7 +9,7 @@
         <div class="card">
             <div class="top highlight">
                 <div class="avatar">
-                    <a href="https://www.flaticon.com/free-icons/avatar" target="_blank">
+                    <a href="https://www.flaticon.com/free-icons/avatar" target="_blank" rel="noopener">
                         <img src="{{url_for('static', filename=profile.avatar)}}" alt="profile pic" title="Avatar icon by Flaticon">
                     </a>
                 </div>
